welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:12: error: not found: value versLAvant
move(6,versLAvant) 
       ^