welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas: Int, versLAvant: Boolean) = {
	for(i<- 1 to nbPas) {
		if(versLAvant){
			avance()
		} else {
			recule()
		}
	}
}

move(6,versLAvant)